# rasterizer

./: CMakeLists.txt  README.md
src/: framebuffer.h  geometry.h  main.cpp  obj.h
